<resources>

    <!-- name of our application -->
    <string name="app_name" translatable="false">Jigsaw</string>

    <!-- keys for shared preferences -->
    <string translatable="false" name="game_stats_file_key">com.gamesbykevin.jigsaw.GAME_STATS_FILE_KEY</string>
    <string translatable="false" name="open_gl_zoom_file_key">com.gamesbykevin.jigsaw.OPEN_GL_ZOOM_FILE_KEY</string>
    <string translatable="false" name="timer_file_key">com.gamesbykevin.jigsaw.TIMER_FILE_KEY</string>
    <string translatable="false" name="google_play_auto_login_file_key">com.gamesbykevin.jigsaw.GOOGLE_PLAY_AUTO_LOGIN_FILE_KEY</string>
    <string translatable="false" name="saved_puzzle_key">com.gamesbykevin.jigsaw.SAVED_PUZZLE</string>
    <string translatable="false" name="saved_puzzle_custom_image_key">com.gamesbykevin.jigsaw.SAVED_PUZZLE_CUSTOM_IMAGE</string>
    <string translatable="false" name="saved_puzzle_rotate_key">com.gamesbykevin.jigsaw.SAVED_PUZZLE_ROTATE</string>
    <string translatable="false" name="saved_puzzle_timer_key">com.gamesbykevin.jigsaw.SAVED_PUZZLE_TIMER</string>
    <string translatable="false" name="completed_puzzle_index_key">com.gamesbykevin.jigsaw.COMPLETED_PUZZLE_INDEX</string>

    <!-- button text -->
    <string name="button_text_next">Continue</string>
    <string name="button_text_rate">Rate</string>
    <string name="button_text_more">More</string>
    <string name="button_text_menu">Menu</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_options">Options</string>
    <string name="button_text_tutorial">Tutorial</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_leaderboard">Leaderboard</string>
    <string name="button_text_achievements">Achievements</string>

    <!-- prompt to exit -->
    <string name="exit_prompt">Press again to exit</string>

    <!-- text on options page -->
    <string name="text_in_game_options">Game Options</string>
    <string name="vibrate_on">Vibrate: On</string>
    <string name="vibrate_off">Vibrate: Off</string>
    <string name="sound_on">Sound: On</string>
    <string name="sound_off">Sound: Off</string>
    <string name="zoom_on">Zoom: On</string>
    <string name="zoom_off">Zoom: Off</string>
    <string name="timer_on">Timer: On</string>
    <string name="timer_off">Timer: Off</string>
    <string name="google_play_auto_enabled">Google Play Auto: On</string>
    <string name="google_play_auto_disabled">Google Play Auto: Off</string>

    <!-- text on prompt save page -->
    <string name="text_prompt_title">Save</string>
    <string name="textViewPrompt">Save progress before exit?</string>
    <string name="textViewPromptExtra">This will overwrite existing save.</string>
    <string name="confirm_save">Yes</string>
    <string name="confirm_exit">No</string>

    <!-- text displayed -->
    <string name="level_select_text">Select Picture</string>
    <string name="count_description">Pieces</string>
    <string name="confirm_text">Confirm</string>
    <string name="continue_text">Continue</string>
    <string name="rotate_text">Rotate</string>
    <string name="choose_image">Select</string>
    <string name="save_image_resume">Resume</string>
    <string name="custom_image_desc_1"></string>
    <string name="game_over_text">Game Over</string>

    <string name="settings_background_text">Background Color</string>

    <!-- text to display in  the tutorial -->
    <string name="tutorial_instructions_1">Tutorial Part 1 of 9\nSelect your image from the list</string>
    <string name="tutorial_instructions_2">Tutorial Part 2 of 9\nConfirm your puzzle settings</string>
    <string name="tutorial_instructions_3">Tutorial Part 3 of 9\nYou will view the completed puzzle for a moment</string>
    <string name="tutorial_instructions_4">Tutorial Part 4 of 9\nThen it will be scrambled</string>
    <string name="tutorial_instructions_5">Tutorial Part 5 of 9\nIf rotate is enabled, tap the puzzle piece to rotate</string>
    <string name="tutorial_instructions_6">Tutorial Part 6 of 9\nYou can zoom out to view the entire board</string>
    <string name="tutorial_instructions_7">Tutorial Part 7 of 9\nYou can zoom in as well</string>
    <string name="tutorial_instructions_8">Tutorial Part 8 of 9\nAccess the in game settings to change the color</string>
    <string name="tutorial_instructions_9">Tutorial Part 9 of 9\nWhen you complete the puzzle you have more options</string>

    <!-- ui messages for google play services -->
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="UNKNOWN_ERROR">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

</resources>